ves-parser/src/tests/t6_parse_invalid_assignments.test
a?.b = v;
a()?.b = v;
[a,b,c].f()?.x = v;
a()?.b().c = v;

%output
error: Cannot assign to an optional field access. Consider performing the assignment in an `if` block.
  ┌─ <source: #cde58996444e18d3>:1:1
  │
1 │ a?.b = v;
  │ ^^^^

error: Cannot assign to an optional field access. Consider performing the assignment in an `if` block.
  ┌─ <source: #cde58996444e18d3>:2:1
  │
2 │ a()?.b = v;
  │ ^^^^^^

error: Cannot assign to an optional field access. Consider performing the assignment in an `if` block.
  ┌─ <source: #cde58996444e18d3>:3:1
  │
3 │ [a,b,c].f()?.x = v;
  │ ^^^^^^^^^^^^^^

error: Cannot assign to an optional field access. Consider performing the assignment in an `if` block.
  ┌─ <source: #cde58996444e18d3>:4:1
  │
4 │ a()?.b().c = v;
  │ ^^^^^^^^^^